# BDS-Deep-Learning-Assignments

./: .gitignore  README.md
Assignment1/: Assignment1_SGD_Mechanics_&_Attention_Context.ipynb
Assignment2/: .gitignore  Assignment2_Green_Patent_Detection_(PatentSBERTa).ipynb  README.md  finetune.py  hitl_green_100.csv  hitl_green_100_final.csv  hitl_green_100_for_labeling.csv  hitl_green_100_with_llm.csv  llm_label.py  pyproject.toml  slurm_llm.sh
Assignment2/csv/: hitl_human_labeled.csv  hitl_llm_labeled.csv
Assignment3/: Assignment3_Green_Patent_Detection:_Advanced_Architectures_(Agents_vs._QLoRA).ipynb  README.md  finetune.py  mas_label.py  pyproject.toml  slurm_finetune.sh  slurm_mas.sh
Assignment3/csv/: hitl_green_100.csv  mas_human_labeled.csv  mas_labeled.csv
